[PSA-36] updated the kubernetes probes in exernal dependencies
Conflicts:
	deployment/sandbox-v2/helm/charts/artifactory/templates/artifactory-dep.yaml

--- a/deployment/sandbox-v2/helm/charts/activemq/templates/dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/activemq/templates/dep.yaml
@@ -42,9 +42,21 @@ spec:
           value: {{ .Values.adminPassword }} 
         ports:
         - containerPort: {{ .Values.docker.containerPort }} 
+        livenessProbe:
+          tcpSocket:
+            port: {{ .Values.docker.containerPort }}  # All defaults used
+          periodSeconds: {{ .Values.probe.livenessPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
         readinessProbe:
           tcpSocket:
             port: {{ .Values.docker.containerPort }}  # All defaults used
+          periodSeconds: {{ .Values.probe.period }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        startupProbe:
+          tcpSocket:
+            port: {{ .Values.docker.containerPort }}  # All defaults used
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          periodSeconds: {{ .Values.probe.startupPeriod }}
         volumeMounts:
         - name: q-data
           mountPath: {{ .Values.mountPath }} 
