--- a/deployment/sandbox-v2/helm/charts/clamav/templates/clamav-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/clamav/templates/clamav-dep.yaml
@@ -32,4 +32,15 @@ spec:
         readinessProbe:
           tcpSocket:
             port: {{  .Values.docker.containerPort }}
-
+          periodSeconds: {{ .Values.probe.period }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        livenessProbe:
+          tcpSocket:
+            port: {{  .Values.docker.containerPort }}
+          periodSeconds: {{ .Values.probe.livenessPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        startupProbe:
+          tcpSocket:
+            port: {{  .Values.docker.containerPort }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          periodSeconds: {{ .Values.probe.startupPeriod }}
