--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -443,3 +443,7 @@ cache_provider_url: http://artifactory-service.default:80/artifactory/libs-relea
 
 # user for every service inside the container
 container_user: mosip
+
+
+db_modules: '["mosip_master", "mosip_kernel", "mosip_iam", "mosip_audit", "mosip_authdevice", "mosip_keymgr", "mosip_regdevice", "mosip_credential", "mosip_idrepo", "mosip_idmap", "mosip_prereg", "mosip_regprc", "mosip_ida", "mosip_pms", "mosip_websub", "mosip_hotlist"]'
+backup_path: '{{tmp_dir}}/db-backup/'
