--- a/deployment/sandbox-v2/helm/charts/packetmanager/templates/packetmanager-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/packetmanager/templates/packetmanager-svc.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: {{ .Release.Namespace }} 
 spec:
   ports:
-  - port: {{ .Values.services.packet.servicePort }}
-    targetPort: {{ .Values.services.packet.containerPort }}
+  - port: {{ .Values.services.packet.ports.servicePort }}
+    targetPort: {{ .Values.services.packet.ports.containerPort }}
   selector:
     app: {{ .Values.services.packet.serviceName }} 
 
