--- a/deployment/sandbox-v2/helm/charts/kernel/templates/audit-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/audit-dep.yaml
@@ -52,7 +52,7 @@ spec:
         - name: JDK_JAVA_OPTIONS
           value: {{ $podconfig.java_opts }}
         ports:
-        - containerPort: {{ .Values.services.audit.containerPort }}
+        - containerPort: {{ .Values.services.audit.ports.containerPort }}
         readinessProbe:
           httpGet:
             path: {{ .Values.services.audit.healthUrl }}
