--- a/deployment/sandbox-v2/helm/charts/kernel/templates/key-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/key-dep.yaml
@@ -58,7 +58,7 @@ spec:
         - name: JDK_JAVA_OPTIONS
           value: {{ $podconfig.java_opts }}
         ports:
-        - containerPort: {{ .Values.services.key.containerPort }}
+        - containerPort: {{ .Values.services.key.ports.containerPort }}
         readinessProbe:
           httpGet:
             path: {{ .Values.services.key.healthUrl }}
