--- a/deployment/sandbox-v2/helm/charts/pms/templates/pm-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/pms/templates/pm-dep.yaml
@@ -52,16 +52,22 @@ spec:
         - name: JDK_JAVA_OPTIONS
           value: {{ $podconfig.java_opts }}
         ports:
-        - containerPort: {{ .Values.services.pm.containerPort }}
+        - containerPort: {{ .Values.services.pm.ports.containerPort }}
         readinessProbe:
           httpGet:
-            path: {{ .Values.services.pm.healthUrl }} 
-            port: {{ .Values.services.pm.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
-#        livenessProbe:
-#          httpGet:
-#            path: {{ .Values.services.pm.healthUrl }} 
-#            port: {{ .Values.services.pm.containerPort }} 
-#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-#          periodSeconds: {{ .Values.probe.period }}
+            path: {{ .Values.services.pm.healthUrl }}
+            port: {{ .Values.services.pm.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.period }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.pm.healthUrl }}
+            port: {{ .Values.services.pm.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.livenessPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        startupProbe:
+          httpGet:
+            path: {{ .Values.services.pm.healthUrl }}
+            port: {{ .Values.services.pm.ports.containerPort }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          periodSeconds: {{ .Values.probe.startupPeriod }}
