--- a/deployment/sandbox-v2/helm/charts/prereg/templates/booking-dep.yml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/booking-dep.yml
@@ -8,6 +8,7 @@ metadata:
     component: {{ .Values.component }} 
     
 spec:
+  {{ $podconfig := .Values.services.datasync.podconfig }}
   replicas: {{ .Values.services.booking.podconfig.replicas }} 
   selector:
     matchLabels:
