--- a/deployment/v3/cluster/aws/istio/iop.yaml
+++ b/deployment/v3/cluster/aws/istio/iop.yaml
@@ -10,6 +10,8 @@ spec:
     pathNormalization:
       normalization: MERGE_SLASHES
     defaultConfig:
+      proxyMetadata:
+        ISTIO_META_IDLE_TIMEOUT: 0s
       gatewayTopology:
         numTrustedProxies: 2
   components:
