[MOSIP-14283] Fixing container start after sidecar proxy

--- a/deployment/v3/cluster/aws/istio/iop.yaml
+++ b/deployment/v3/cluster/aws/istio/iop.yaml
@@ -12,6 +12,7 @@ spec:
     defaultConfig:
       proxyMetadata:
         ISTIO_META_IDLE_TIMEOUT: 0s
+      holdApplicationUntilProxyStarts: true
       gatewayTopology:
         numTrustedProxies: 2
   components:
