[MOSIP-15697] Slight Changes in VirtualService and Gateway for IAM cluster

--- a/deployment/v3/rancher/aws/istio/chart/istio-addons/templates/virtualservices.yaml
+++ b/deployment/v3/rancher/aws/istio/chart/istio-addons/templates/virtualservices.yaml
@@ -14,11 +14,10 @@ spec:
           prefix: /
     route:
     - destination:
-        host: rancher.cattle-system
+        host: rancher.cattle-system.svc.cluster.local
         port:
           number: 80
     headers:
       request:
         set:
           x-forwarded-proto: https
-
