--- a/deployment/v3/external/iam/chart/istio-addons/templates/gateway.yaml
+++ b/deployment/v3/external/iam/chart/istio-addons/templates/gateway.yaml
@@ -4,13 +4,11 @@ metadata:
   name: keycloak
 spec:
   selector:
-    istio: ingressgateway-internal
+    istio: ingressgateway
   servers:
   - port:
-      number: 80 
-      name: http 
+      number: 80
+      name: http
       protocol: HTTP
     hosts:
     - {{ .Values.keycloakHost }}
-
-
