--- a/deployment/v3/external/iam/chart/istio-addons/templates/virtualservice.yaml
+++ b/deployment/v3/external/iam/chart/istio-addons/templates/virtualservice.yaml
@@ -14,11 +14,10 @@ spec:
           prefix: /
     route:
     - destination:
-        host: keycloak  
+        host: keycloak.keycloak.svc.cluster.local
         port:
           number: 80
     headers:
       request:
         set:
           x-forwarded-proto: https
-
