[DSD-141] Updating virus scanner for regproc

--- a/deployment/sandbox-v2/helm/charts/dmzregproc/templates/group1-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/templates/group1-dep.yaml
@@ -43,6 +43,9 @@ spec:
           value: {{ .Values.isGlowroot }}
         - name: JDK_JAVA_OPTIONS
           value: {{ $podconfig.java_opts }}
+        - name: regproc_jars_env
+          value: {{ .Values.regprocJarsPath }}
+
         ports:
         - name: hazelcast
           containerPort: {{ .Values.services.group1.ports.hazelcastPort }}
