--- a/deployment/sandbox-v2/helm/charts/regproc/templates/group6.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/group6.yaml
@@ -44,6 +44,9 @@ spec:
           value: {{ .Values.isGlowroot }}
         - name: JDK_JAVA_OPTIONS
           value: {{ $podconfig.java_opts }}
+        - name: regproc_jars_env
+          value: {{ .Values.regprocJarsPath }}
+
         ports:
         - name: hazelcast
           containerPort: {{ .Values.services.group6.ports.hazelcastPort }}
