--- a/deployment/sandbox-v2/helm/charts/admin/templates/ui-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/admin/templates/ui-dep.yaml
@@ -25,7 +25,10 @@ spec:
       containers:
       - name: {{.Values.services.ui.serviceName}}
         image: {{ .Values.services.ui.dockerImage  }}
-        imagePullPolicy: {{ .Values.imagePullPolicy }} 
+        imagePullPolicy: {{ .Values.imagePullPolicy }}
+        env:
+          - name: artifactory_url_env
+            value: {{ .Values.artifactoryUrl }}
         ports:
         - containerPort: {{ .Values.services.ui.containerPort }} 
         readinessProbe:
