--- a/deployment/v3/rancher/aws/istio/chart/istio-addons/templates/proxy-protocol.yaml
+++ b/deployment/v3/rancher/aws/istio/chart/istio-addons/templates/proxy-protocol.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: EnvoyFilter
 metadata:
   name: proxy-protocol
+  namespace: istio-system
 spec:
   workloadSelector:
     labels:
