--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -67,7 +67,7 @@ versions:
       trans:
         'regproc-registration-transaction-service': 'mosipdev/registration-processor-registration-transaction-service:develop'
       reprocess:
-        'regproc-reprocessor-stage': 'mosipdev/registration-processor-reprocessor-stage:develop'
+        'regproc-reprocessor': 'mosipdev/registration-processor-reprocessor:develop'
       notificationService:
         'regproc-notification-service': 'mosipdev/registration-processor-notification-service:develop'
       salt:
