[PSA-36] updated probes in regproc

--- a/deployment/sandbox-v2/helm/charts/regproc/templates/notification-service-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/notification-service-dep.yaml
@@ -46,16 +46,22 @@ spec:
         ports:
         - name: server-port
           containerPort: {{ .Values.services.notificationService.ports.containerPort }}
+        readinessProbe:
+          httpGet:
+            path: {{ .Values.services.notificationService.healthUrl }}
+            port: {{ .Values.services.notificationService.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.period }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.notificationService.healthUrl }}
+            port: {{ .Values.services.notificationService.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.livenessPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        startupProbe:
+          httpGet:
+            path: {{ .Values.services.notificationService.healthUrl }}
+            port: {{ .Values.services.notificationService.ports.containerPort }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          periodSeconds: {{ .Values.probe.startupPeriod }}
 
-#        readinessProbe:
-#          httpGet:
-#            path: {{ .Values.services.notificationService.healthUrl }} 
-#            port: {{ .Values.services.notificationService.ports.containerPort }} 
-#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-#          periodSeconds: {{ .Values.probe.period }} 
-#        livenessProbe:
-#          httpGet:
-#            path: {{ .Values.services.notificationService.healthUrl }} 
-#            port: {{ .Values.services.notificationService.ports.containerPort }} 
-#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-#          periodSeconds: {{ .Values.probe.period }} 
