--- a/deployment/sandbox-v2/helm/charts/regproc/templates/group2-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/group2-dep.yaml
@@ -59,16 +59,22 @@ spec:
           containerPort: {{ .Values.services.msg.ports.eventbusPort }}
         - name: msgverticle
           containerPort: {{ .Values.services.msg.ports.containerPort }}
-
-        readinessProbe:  # TODO: Uncomment this or put a actuator health url
+        readinessProbe:
           httpGet:
-            path: {{ .Values.services.group2.healthUrl }}
-            port: {{ .Values.services.group2.ports.containerPort }}
-          initialDelaySeconds: {{ .Values.probe.initialDelay }}
+            path: {{ .Values.services.msg.healthUrl }}
+            port: {{ .Values.services.msg.ports.containerPort }}
           periodSeconds: {{ .Values.probe.period }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
         livenessProbe:
           httpGet:
-            path: {{ .Values.services.group2.healthUrl }}
-            port: {{ .Values.services.group2.ports.containerPort }}
-          initialDelaySeconds: {{ .Values.probe.initialDelay }}
-          periodSeconds: {{ .Values.probe.period }}
+            path: {{ .Values.services.msg.healthUrl }}
+            port: {{ .Values.services.msg.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.livenessPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        startupProbe:
+          httpGet:
+            path: {{ .Values.services.msg.healthUrl }}
+            port: {{ .Values.services.msg.ports.containerPort }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          periodSeconds: {{ .Values.probe.startupPeriod }}
+
