--- a/deployment/sandbox-v2/helm/charts/regproc/templates/group7-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/group7-dep.yaml
@@ -55,16 +55,22 @@ spec:
           containerPort: {{ .Values.services.print.ports.eventbusPort }}
         - name: printverticle
           containerPort: {{ .Values.services.print.ports.containerPort }}
-
-        readinessProbe:  # TODO: Uncomment this or put a actuator health url
+        readinessProbe:
           httpGet:
             path: {{ .Values.services.group7.healthUrl }}
             port: {{ .Values.services.group7.ports.containerPort }}
-          initialDelaySeconds: {{ .Values.probe.initialDelay }}
           periodSeconds: {{ .Values.probe.period }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
         livenessProbe:
           httpGet:
             path: {{ .Values.services.group7.healthUrl }}
             port: {{ .Values.services.group7.ports.containerPort }}
-          initialDelaySeconds: {{ .Values.probe.initialDelay }}
-          periodSeconds: {{ .Values.probe.period }}
+          periodSeconds: {{ .Values.probe.livenessPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        startupProbe:
+          httpGet:
+            path: {{ .Values.services.group7.healthUrl }}
+            port: {{ .Values.services.group7.ports.containerPort }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          periodSeconds: {{ .Values.probe.startupPeriod }}
+
