--- a/deployment/sandbox-v2/helm/charts/regproc/templates/reprocess-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/reprocess-dep.yaml
@@ -63,16 +63,21 @@ spec:
           containerPort: {{ .Values.services.reprocess.ports.workflowSearchEventBusPort }}
         - name: wkflowseach-sp
           containerPort: {{ .Values.services.reprocess.ports.workflowSearchServerPort }}
-
-#        readinessProbe:
-#          httpGet:
-#            path: {{ .Values.services.reprocess.healthUrl }} 
-#            port: {{ .Values.services.reprocess.ports.containerPort }} 
-#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-#          periodSeconds: {{ .Values.probe.period }} 
- #       livenessProbe:
- #        httpGet:
- #           path: {{ .Values.services.reprocess.healthUrl }} 
- #           port: {{ .Values.services.reprocess.ports.containerPort }} 
- #         initialDelaySeconds: {{ .Values.probe.initialDelay }} 
- #         periodSeconds: {{ .Values.probe.period }} 
+        readinessProbe:
+          httpGet:
+            path: {{ .Values.services.reprocess.healthUrl }}
+            port: {{ .Values.services.reprocess.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.period }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.reprocess.healthUrl }}
+            port: {{ .Values.services.reprocess.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.livenessPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        startupProbe:
+          httpGet:
+            path: {{ .Values.services.reprocess.healthUrl }}
+            port: {{ .Values.services.reprocess.ports.containerPort }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          periodSeconds: {{ .Values.probe.startupPeriod }}
