--- a/deployment/sandbox-v2/helm/charts/regproc/templates/trans-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/trans-dep.yaml
@@ -47,17 +47,21 @@ spec:
         ports:
         - name: verticle-port
           containerPort: {{ .Values.services.trans.ports.containerPort }}
-
         readinessProbe:
           httpGet:
-            path: {{ .Values.services.trans.healthUrl }} 
-            port: {{ .Values.services.trans.ports.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
-#        livenessProbe:
-#          httpGet:
-#            path: {{ .Values.services.trans.healthUrl }} 
-#            port: {{ .Values.services.trans.ports.containerPort }} 
-#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-#          periodSeconds: {{ .Values.probe.period }} 
-#
+            path: {{ .Values.services.trans.healthUrl }}
+            port: {{ .Values.services.trans.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.period }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.trans.healthUrl }}
+            port: {{ .Values.services.trans.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.livenessPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        startupProbe:
+          httpGet:
+            path: {{ .Values.services.trans.healthUrl }}
+            port: {{ .Values.services.trans.ports.containerPort }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          periodSeconds: {{ .Values.probe.startupPeriod }}
