--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -467,5 +467,6 @@ envuser: 'qa'
 target_uri: 'minibox2.mosip.net'
 testlevel: 'smoke'
 backup_path: '{{tmp_dir}}/db-backup/'
+utils_dir: '{{install_root}}/utils'
 
 regproc_clamav_jar_path: /artifactory/libs-release-local/clamav/kernel-virusscanner-clamav.jar  
