updated functional test docs

--- a/deployment/sandbox-v2/roles/packages/openjdk/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/packages/openjdk/tasks/main.yml
@@ -3,4 +3,25 @@
     name: java-11-openjdk
     state: present
   become: yes
+
+# Set jdk-11 as default
      
+- name: set jdk 11 as default for java
+  block:
+    - name: Get jdk 11 serial number from update-alternatives for java
+      shell: echo "" | sudo update-alternatives --config java | grep java-11 | awk '{print $1}'
+      register: java11SerialNo
+      become: yes
+    - name: Set jdk 11 as default for java
+      shell: echo "{{java11SerialNo.stdout}}" | sudo update-alternatives --config java
+      become: yes
+
+- name: set jdk 11 as default for javac
+  block:
+    - name: Get jdk 11 serial number from update-alternatives for javac
+      shell: echo "" | sudo update-alternatives --config javac | grep java-11 | awk '{print $1}'
+      register: javac11SerialNo
+      become: yes
+    - name: Set jdk 11 as default for java
+      shell: echo "{{javac11SerialNo.stdout}}" | sudo update-alternatives --config javac | grep java-8 | awk '{print $1}'
+      become: yes
