updated to pull DML's from mosip-data repo

--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -281,7 +281,7 @@ repos:
     githubuser: ''
     githubpassword: ''
   ref_impl:
-    src: https://github.com/mosip/mosip-ref-impl
+    src: https://github.com/mosip/mosip-data
     dest: '{{tmp_dir}}/mosip-ref-impl'
     tag: 1.2.0-rc1
     githubuser: ''
