--- a/deployment/sandbox-v2/roles/packages/openjdk/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/packages/openjdk/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Install openjdk
   yum:
-    name: java-11-openjdk
+    name: java-11-openjdk-devel
     state: present
   become: yes
 
@@ -9,7 +9,7 @@
 - name: set jdk 11 as default for java
   block:
     - name: Get jdk 11 serial number from update-alternatives for java
-      shell: echo "" | sudo update-alternatives --config java | grep java-11 | awk '{print $1}'
+      shell: echo "" | sudo update-alternatives --config java | grep java-11 | awk '{print $2}'
       register: java11SerialNo
       become: yes
     - name: Set jdk 11 as default for java
