--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -153,7 +153,7 @@ versions:
       mv:
         'mock-mv': 'mosipqa/mock-mv:1.1.5'
       biosdk:
-        'mock-biosdk-service': 'mosipid/biosdk-server:1.2.0-rc1'
+        'mock-biosdk-service': 'mosipdev/biosdk-server:develop'
 
     artifactory:
       service:
