--- a/deployment/v3/rancher/aws/istio/iop.yaml
+++ b/deployment/v3/rancher/aws/istio/iop.yaml
@@ -20,3 +20,4 @@ spec:
           serviceAnnotations:
             service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
             service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
+            service.beta.kubernetes.io/aws-load-balancer-internal: "true"
